kubernetes/prod/app-prod-flask-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-prod-flask-deployment
    labels:
        env: prod
        app: app-prod-flask
spec:
    replicas: 1
    selector:
        matchLabels:
            app: app-prod-flask
            env: prod
    template:
        metadata:
            labels:
                app: app-prod-flask
                env: prod
        spec:
            containers:
                - name: app-prod-flask-deployment
                  imagePullPolicy: Always
                  image: rx9933/cardio-disease:2.1
                  command: ['python3', 'api.py']
                  ports:
                  - name: http
                    containerPort: 5000
