kubernetes/prod/app-prod-wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-wrk-deployment
  labels:
    app: app-prod-wrk
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-prod-wrk
  template:
    metadata:
      labels:
        app: app-prod-wrk
        env: prod
    spec:
      containers:
        - name: app-prod-wrk
          image: rx9933/cardio-disease:2.0
          imagePullPolicy: Always
