kubernetes/prod/api-service-prod.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cardio-prod-api-service
  labels:
    env: prod
spec:
  type: ClusterIP
  selector:
    app: cardio-prod-api
  ports:
  - name: flask-port
    port: 5000
    targetPort: 5000
