kubernetes/prod/app-prod-flask-service.yml
---
apiVersion: v1
kind: Service
metadata:
    name: app-prod-flask-service
    labels:
        env: prod
spec:
    type: ClusterIP
    selector:
        app: app-prod-flask
    ports:
    - name: app-prod-flask
      port: 5000
      targetPort: 5000
