kubernetes/prod/app-prod-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: app-prod-flask
  ports:
  - name: app-prod-flask
    port: 5000
    targetPort: 5000
