kubernetes/prod/app-prod-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
    name: app-prod-redis-service
    labels:
        env: prod
spec:
    type: ClusterIP
    selector:
        app: app-prod-redis
    ports:
    - name: app-prod-redis
      port: 6379
      targetPort: 6379
