kubernetes/prod/db-service-prod.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cardio-prod-db-service
  labels:
    env: prod
spec:
  type: ClusterIP
  selector:
    app: cardio-prod-db
  ports:
  - name: redis-port
    port: 6379
    targetPort: 6379
